--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "start": "ember server",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "https://github.com/peec/ember-mdl",
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Petter Kjelkenes <kjelkenes@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.2",
@@ -33,6 +33,7 @@
     "ember-cli-sass": "5.2.1",
     "ember-cli-sri": "^1.0.3",
     "ember-cli-uglify": "^1.2.0",
+    "ember-code-snippet": "^1.1.3",
     "ember-data": "1.13.8",
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
@@ -40,13 +41,17 @@
     "ember-try": "0.0.6"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "material",
+    "design",
+    "ember"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.3",
     "ember-cli-htmlbars": "^1.0.1"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "http://peec.github.io/ember-mdl"
   }
 }
